--- a/src/app/list/list.page.html
+++ b/src/app/list/list.page.html
@@ -4,7 +4,7 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>
-      List
+      Fotbal
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -37,13 +37,12 @@
     </ion-list>
   -->
   <ion-list>
-    <ion-item *ngFor="let item of items">
+    <ion-item-sliding *ngFor="let item of items">
+    <ion-item button (click)='onLigaClick(item.note)' >
       <ion-icon [name]="item.icon" slot="start"></ion-icon>
       {{item.title}}
-      <div class="item-note" slot="end">
-        {{item.note}}
-      </div>
     </ion-item>
+  </ion-item-sliding>
   </ion-list>
   <!--
     <div *ngIf="selectedItem" padding>
