--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -2,3 +2,18 @@
   max-height: 35vh;
   overflow: hidden;
 }
+
+ion-content.background{
+  --background: url(/assets/homeimg.jpg) 0 0/100% 100% no-repeat;
+}
+
+ion-title.nadpis{
+  margin-top:10px;
+  color:white;
+  font-weight: bold;
+}
+
+ion-label.podnadpis{
+  color:white;
+  font-weight: bold;
+}
