--- a/src/app/list/list.page.html
+++ b/src/app/list/list.page.html
@@ -11,7 +11,7 @@
 
 <ion-content>
 
-    <ion-input [(ngModel)]="userInput" placeholder="Hledej podle názvu týmu...">
+    <ion-input class="hledej" [(ngModel)]="userInput" placeholder="Hledej podle názvu týmu...">
         <ion-icon name="search" slot="start"></ion-icon>
     </ion-input>
     <ion-button (click)="btnSportClicked()" expand="block" > Hledej </ion-button>
