--- a/src/app/ligazapasy/ligazapasy.page.html
+++ b/src/app/ligazapasy/ligazapasy.page.html
@@ -14,8 +14,19 @@
 
     <ion-list>
         <ion-item-sliding *ngFor="let item of stahniSportResult">
-        <ion-item button (click)='onZapasClick(item.idEvent,item.dateEvent,item.strTime,item.strEvent)' >
+        <!--ion-item button (click)='onZapasClick(item.idEvent,item.dateEvent,item.strTime,item.strEvent)' -->
+        <ion-item>
           <ion-icon name="football" slot="start"></ion-icon>
+          <!--ion-icon name="information-circle" slot="end"></ion-icon-->
+          <div slot="end">
+          <ion-button (click)='presentAlert(item.idEvent,item.dateEvent,item.strTime,item.strEvent)' color="light" > 
+          <!--ion-button (click)='onInfoClick(item.idEvent,item.dateEvent,item.strTime,item.strEvent)' color="light" -->     
+            <ion-icon  name="information-circle"></ion-icon>
+          </ion-button>
+          <ion-button (click)='onZapasClick(item.idEvent,item.dateEvent,item.strTime,item.strEvent)' color="light" >     
+            <ion-icon  name="calendar"></ion-icon>
+          </ion-button>
+          </div>
           {{item.strEvent}} 
           <div slot="end">{{item.dateEvent}}</div> 
         </ion-item>
